--- a/Client/wwwroot/css/app.css
+++ b/Client/wwwroot/css/app.css
@@ -8,6 +8,10 @@ h1:focus {
     outline: none;
 }
 
+.bg-half-black {
+    background: rgba(0, 0, 0, 0.5);
+}
+
 a, .btn-link {
     color: #0071c1;
 }
