--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -7,4 +7,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Client
-@using Client.Shared
+@using Client.Static
+@using global::Shared.Models
