Improved the Client GitHub workflow file.

--- a/Client/Components/ModalConfirmDelete.razor
+++ b/Client/Components/ModalConfirmDelete.razor
@@ -13,7 +13,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button @onclick="() => OnClickButtonClose.InvokeAsync(false)" type="button" class="btn btn-secondary">Close</button>
+                    <button @onclick="() => OnClickButtonClose.InvokeAsync(false)" type="button" class="btn btn-secondary">Cancel</button>
                     <button @onclick="DeletePostAsync" type="button" class="btn btn-danger">Confirm</button>
                 </div>
             }
