--- a/Client/Components/ModalCreatePost.razor
+++ b/Client/Components/ModalCreatePost.razor
@@ -22,7 +22,7 @@
                     <ValidationSummary />
                 </div>
                 <div class="modal-footer">
-                    <button @onclick="() => OnClickButtonClose.InvokeAsync(_createdPost)" type="button" class="btn btn-secondary">Close</button>
+                    <button @onclick="() => OnClickButtonClose.InvokeAsync(_createdPost)" type="button" class="btn btn-secondary">Cancel</button>
                     <button type="submit" class="btn btn-success">Create</button>
                 </div>
             </EditForm>
