--- a/Client/Components/ModalUpdatePost.razor
+++ b/Client/Components/ModalUpdatePost.razor
@@ -24,7 +24,7 @@
                         <ValidationSummary />
                     </div>
                     <div class="modal-footer">
-                        <button @onclick="() => OnClickButtonClose.InvokeAsync(PostToUpdate)" type="button" class="btn btn-secondary">Close</button>
+                        <button @onclick="() => OnClickButtonClose.InvokeAsync(PostToUpdate)" type="button" class="btn btn-secondary">Cancel</button>
                         <button type="submit" class="btn btn-success">Update</button>
                     </div>
                 </EditForm>
